--- a/src/components/VideoCard/videocard.css
+++ b/src/components/VideoCard/videocard.css
@@ -9,8 +9,17 @@ div.video-card > *:not(:first-child):not(:last-child) {
 }
 
 .video-card .card-badge{
+    width: 25px;
+    height: 25px;
+    border-radius: 100%;
     background: none;
     color: var(--black);
+    margin: 0 0.5rem;
+    padding: 0.1rem 0.3rem;
+}
+
+.video-card .card-badge:hover{
+    background-color: var(--white);
 }
 
 .video-card-timer {
@@ -37,7 +46,7 @@ div.video-card > *:not(:first-child):not(:last-child) {
 }
 
 .video-card button{
-    background-color: var(--bg-primary);
+    /* background-color: var(--bg-primary); */
     width: 100%;
     border-radius: 0; 
 }
